# embedi

./: .env.example  .gitignore  Cargo.toml  README.md  commands.json  config.json
rp2350-comms/: Cargo.toml  Makefile  build.rs  memory.x
rp2350-comms/.cargo/: config.toml
rp2350-comms/src/: app.rs  bootinfo.rs  config.rs  detection.rs  detector.rs  filter.rs  globals.rs  hardware.rs  irq.rs  lib.rs  mailbox.rs  main.rs  process.rs  ring_buffer.rs  types.rs
src/: ai.rs  assistant.rs  audio.rs  commands.rs  lib.rs  main.rs  speech.rs
