[package]
name = "embedi"
version = "0.1.0"
edition = "2024"

[package.metadata.bundle]
name = "Embedi"
identifier = "com.embedi"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
anyhow = "1.0"
hound = "3.5"
cpal = "0.16"
dotenv = "0.15"
serialport = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
whisper-rs = "0.11"
